--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
     margin: 0px;
-    background-color: cornflowerblue;
     width: 2000px;
 }
 
@@ -8,11 +7,40 @@ header {
     background-image: url(/img/pattern.png);
     height: 190px;
     width: 2000px;
+    background-color: cornflowerblue;
 }
 
 #logo {
+    margin-left: 10px;
     width: 400px;
     height: 120px;
     margin-top: 70px;
 }
 
+body main {
+    margin-left: 10px;
+    background-color: white;
+    margin-top: 20px;
+}
+
+h1 {
+    font-size: 84px;
+    margin-bottom: 0px;
+    margin-top: 20px;
+}
+
+#title h4 {
+    font-size: 30px;
+    color: gray;
+    margin: 0px;
+}
+
+.small {
+    font-size: 20px;
+    margin: 0px;
+    color: gray;
+}
+
+strong {
+    color: cornflowerblue;
+}
